# tide-GPR

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
examples/: README.md  benchmark_maxwell.py  benchmark_maxwell3d_cuda_graph.py  benchmark_tm2d_example_default.py  benchmark_tm2d_fused_forward.py  benchmark_tm2d_training_path.py  example_3Dinvesion.py  example_banana_doughnut_kernel.py  example_checkpoint.py  example_gradient_anomaly_locator.py  example_gradient_dot_fd_validation.py  example_maxwell3d_analytic_compare.py  example_maxwell3d_dispersion_analytic_compare.py  example_maxwell3d_petrophysical_survey.py  example_multiscale_crosscorr_wrong_wavelet.py  example_multiscale_filtered.py  example_multiscale_joint_eps_sigma.py  example_multiscale_random_sources.py  example_q_gsot_objectives.py  example_wavefield_animation.py  example_wavefield_animation_3d.py  hyd_3D_model_1_resized.h5  image_domain_lsrtm_pcgnr_over_new.py  lsrtm_pcgnr_over_new.py  mixed_phase_deconv.py  mixed_phase_deconvolution_checked.py  profile_tm2d_ebisu_6q.py  pyproject.toml  wavefield_animation.py
examples/2d/: cross_inv_single_freq_common.py  cross_inv_single_freq_multi.py  different_delay_time.py  different_wavelet_type.py  different_wavelet_type_conv_only.py  different_wavelet_type_noconv.py  different_wavelet_type_norm_only.py  example_multiscale_filtered_common.py  example_multiscale_filtered_lsrtm_common.py  example_multiscale_filtered_multi.py  hydro_forward_lines.py  hydro_forward_lines_minibatch_benchmark.py  joint_common.py  joint_multi.py  multi_wave_inv_single_freq_common.py  (+1 more)
(+202 files in other folders)
