[project]
name = "tide-gpr-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12
dependencies = [
    "deepwave>=0.0.26",
    "einops>=0.8.2",
    "h5py>=3.14.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "sotb-wrapper>=2.0.2",
    "tide-gpr==0.0.28",
]
